--- a/作业/css/style.css
+++ b/作业/css/style.css
@@ -6,11 +6,11 @@ header{
     width: 1520px;
     height: 46px;
     line-height: 46px;
-    margin: 30px 0;
-    /* border: 1px solid; */
+    margin: 40px 70px 0 70px;
+    /* padding-right: 200px; */
     display: flex;
-    justify-content: space-around;
-    position: fixed;
+    justify-content: space-between;
+    position: absolute;
     top: -4px;
     z-index: 10;
 }
@@ -20,11 +20,12 @@ a,.head a{
 }
 ul{
     list-style: none;
+    position: relative;
+    left: -230px;
 }
 .head{
     width: 81px;
     float: left;
-    /* border: 1px solid; */
     text-align: center;
     font-family: 微软雅黑;
     font-size: 14px;
